--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "laravel-echo": "^1.15.3",
     "maska": "^2.1.10",
     "pinia": "^2.1.7",
+    "pusher-js": "^8.3.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
